--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
