--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "html-to-image": "^1.11.11",
-    "jspdf": "^2.5.1",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -19,12 +17,17 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.80.10",
+    "@types/html2canvas": "^1.0.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "konva": "^10.0.2",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
@@ -32,6 +35,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-konva": "^19.0.10",
     "recharts": "^2.15.4",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
